LevelRangeFilter: initial branch commit

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,17 +1,28 @@
 status = error
 name = PropertiesConfig
 
+######################################
+# Global properties as varies
+######################################
 property.logPath = logs
 
+######################################
+# Filters and properties of filters
+######################################
 filters = threshold
 
 filter.threshold.type = ThresholdFilter
-filter.threshold.level = debug
+filter.threshold.level = all
 
-appenders = rolling, console
+######################################
+# Appenders Section for roles
+######################################
+appenders = rolling, console, rolling2, errorAppender
 
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
+appender.rolling.immediateFlush= true
+appender.rolling.append = true
 appender.rolling.fileName = ${logPath}/server.log
 appender.rolling.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
@@ -24,20 +35,77 @@ appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size=10MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
 appender.rolling.strategy.max = 20
+appender.rolling.filter.threshold.type = LevelRangeFilter
+appender.rolling.filter.threshold.minLevel = INFO
+appender.rolling.filter.threshold.maxLevel = INFO
+appender.rolling.filter.threshold.onMatch = ACCEPT
+appender.rolling.filter.threshold.onMismatch = DENY
 
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
+appender.rolling2.type = RollingFile
+appender.rolling2.name = debugLog
+appender.rolling2.immediateFlush= true
+appender.rolling2.append = true
+appender.rolling2.fileName = ${logPath}/debug.log
+appender.rolling2.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling2.layout.type = PatternLayout
+appender.rolling2.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.rolling2.policies.type = Policies
+appender.rolling2.policies.time.type = TimeBasedTriggeringPolicy
+appender.rolling2.policies.time.interval = 1
+appender.rolling2.policies.time.modulate = true
+appender.rolling2.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling2.policies.size.size=10MB
+appender.rolling2.strategy.type = DefaultRolloverStrategy
+appender.rolling2.strategy.max = 20
+appender.rolling2.filter.threshold.type = LevelRangeFilter
+appender.rolling2.filter.threshold.minLevel = DEBUG
+appender.rolling2.filter.threshold.maxLevel = DEBUG
+appender.rolling2.filter.threshold.onMatch = ACCEPT
+appender.rolling2.filter.threshold.onMismatch = DENY
+
+appender.errorAppender.type = RollingFile
+appender.errorAppender.name = errorLog
+appender.errorAppender.immediateFlush= true
+appender.errorAppender.append = true
+appender.errorAppender.fileName = ${logPath}/error.log
+appender.errorAppender.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.errorAppender.layout.type = PatternLayout
+appender.errorAppender.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.errorAppender.policies.type = Policies
+appender.errorAppender.policies.time.type = TimeBasedTriggeringPolicy
+appender.errorAppender.policies.time.interval = 1
+appender.errorAppender.policies.time.modulate = true
+appender.errorAppender.policies.size.type = SizeBasedTriggeringPolicy
+appender.errorAppender.policies.size.size=10MB
+appender.errorAppender.strategy.type = DefaultRolloverStrategy
+appender.errorAppender.strategy.max = 20
+appender.errorAppender.filter.threshold.type = LevelRangeFilter
+appender.errorAppender.filter.threshold.minLevel = WARN
+appender.errorAppender.filter.threshold.maxLevel = FATAL
+appender.errorAppender.filter.threshold.onMatch = ACCEPT
+appender.errorAppender.filter.threshold.onMismatch = DENY
+
+######################################
+# Loggers Section for file write
+######################################
 loggers = rolling
 
 logger.rolling.name = org.remad.logging
-logger.rolling.level = debug
+logger.rolling.appenderRefs = rolling, debugLog, errorLog
+logger.rolling.level = all
 logger.rolling.additivity = true
 logger.rolling.appenderRef.rolling.ref = RollingFile
+logger.rolling.appenderRef.rolling2.ref = debugLog
+logger.rolling.apenderRef.errorAppender.ref = errorLog
 
+######################################
+# RootLogger Section for settings
+######################################
 rootLogger.level = all
-rootLogger.appenderRefs = rolling, stdout
-rootLogger.appenderRef.rolling.ref = RollingFile
+rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
