LevelRangeFilter: LevelRange works, logger for package works

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,16 +15,16 @@ filter.threshold.type = ThresholdFilter
 filter.threshold.level = all
 
 ######################################
-# Appenders Section for roles
+# Appenders Section for log-files
 ######################################
-appenders = rolling, console, rolling2, errorAppender
+appenders = rolling, console, rolling2, errorAppender, service
 
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
 appender.rolling.immediateFlush= true
 appender.rolling.append = true
 appender.rolling.fileName = ${logPath}/server.log
-appender.rolling.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.filePattern = server-log-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 appender.rolling.policies.type = Policies
@@ -36,8 +36,8 @@ appender.rolling.policies.size.size=10MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
 appender.rolling.strategy.max = 20
 appender.rolling.filter.threshold.type = LevelRangeFilter
-appender.rolling.filter.threshold.minLevel = INFO
-appender.rolling.filter.threshold.maxLevel = INFO
+appender.rolling.filter.threshold.minLevel = info
+appender.rolling.filter.threshold.maxLevel = info
 appender.rolling.filter.threshold.onMatch = ACCEPT
 appender.rolling.filter.threshold.onMismatch = DENY
 
@@ -84,28 +84,47 @@ appender.errorAppender.policies.size.type = SizeBasedTriggeringPolicy
 appender.errorAppender.policies.size.size=10MB
 appender.errorAppender.strategy.type = DefaultRolloverStrategy
 appender.errorAppender.strategy.max = 20
-appender.errorAppender.filter.threshold.type = LevelRangeFilter
-appender.errorAppender.filter.threshold.minLevel = WARN
-appender.errorAppender.filter.threshold.maxLevel = FATAL
-appender.errorAppender.filter.threshold.onMatch = ACCEPT
-appender.errorAppender.filter.threshold.onMismatch = DENY
+appender.errorAppender.filter.threshold.type = ThresholdFilter
+appender.errorAppender.filter.threshold.level = warn
+
+appender.service.type = RollingFile
+appender.service.name = chats
+appender.service.append = true
+appender.service.fileName = ${logPath}/chats.log
+appender.service.filePattern = chats-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.service.layout.type = PatternLayout
+appender.service.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.service.policies.type = Policies
+appender.service.policies.time.type = TimeBasedTriggeringPolicy
+appender.service.policies.time.interval = 1
+appender.service.policies.time.modulate = true
+appender.service.policies.size.type = SizeBasedTriggeringPolicy
+appender.service.policies.size.size=10MB
+appender.service.strategy.type = DefaultRolloverStrategy
+appender.service.strategy.max = 20
+appender.service.filter.threshold.type = LevelRangeFilter
+appender.service.filter.threshold.minLevel = INFO
+appender.service.filter.threshold.maxLevel = INFO
+appender.service.filter.threshold.onMatch = ACCEPT
+appender.service.filter.threshold.onMismatch = DENY
 
 ######################################
-# Loggers Section for file write
+# Loggers for logging different packages
 ######################################
-loggers = rolling
+loggers = package
 
-logger.rolling.name = org.remad.logging
-logger.rolling.appenderRefs = rolling, debugLog, errorLog
-logger.rolling.level = all
-logger.rolling.additivity = true
-logger.rolling.appenderRef.rolling.ref = RollingFile
-logger.rolling.appenderRef.rolling2.ref = debugLog
-logger.rolling.apenderRef.errorAppender.ref = errorLog
-
-######################################
-# RootLogger Section for settings
-######################################
+# RootLogger write all into logs, besides chats.log
 rootLogger.level = all
-rootLogger.appenderRefs = stdout
+rootLogger.appenderRefs = stdout, rolling, rolling2, errorLog
 rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.rolling.ref = RollingFile
+rootLogger.appenderRef.rolling2.ref = debugLog
+rootLogger.appenderRef.errorAppender.ref = errorLog
+
+# Logs only chat messages of class: org.remad.logging.protocol.Protocol
+logger.package.name = org.remad.logging.protocol.Protocol
+logger.package.level = info
+logger.package.appenderRefs = service
+logger.package.appenderRef.service.ref = chats
+
+
