--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -65,7 +65,7 @@ appender.errorAppender.name = errorLog
 appender.errorAppender.immediateFlush= true
 appender.errorAppender.append = true
 appender.errorAppender.fileName = ${logPath}/error.log
-appender.errorAppender.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.errorAppender.filePattern = error-log-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.errorAppender.layout.type = PatternLayout
 appender.errorAppender.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 appender.errorAppender.policies.type = Policies
@@ -83,7 +83,7 @@ appender.service.type = RollingFile
 appender.service.name = chats
 appender.service.append = true
 appender.service.fileName = ${logPath}/chats.log
-appender.service.filePattern = chats-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.service.filePattern = chats-log-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.service.layout.type = PatternLayout
 appender.service.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 appender.service.policies.type = Policies
@@ -106,17 +106,21 @@ appender.service.filter.threshold.onMismatch = DENY
 loggers = package
 
 # RootLogger write all into logs, besides chats.log
-rootLogger.level = all
+rootLogger.level = debug
+rootLogger.additivity = false
 rootLogger.appenderRefs = stdout, rolling, rolling2, errorLog
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.rolling.ref = RollingFile
+rootLogger.appenderRef.rolling.level = info
 rootLogger.appenderRef.rolling2.ref = debugLog
+rootLogger.appenderRef.rolling2.level = debug
 rootLogger.appenderRef.errorAppender.ref = errorLog
+rootLogger.appenderRef.errorAppender.level = warn
 
 # Logs only chat messages of class: org.remad.logging.protocol.Protocol
 logger.package.name = org.remad.logging.protocol.Protocol
+logger.package.additivity = false
 logger.package.level = info
 logger.package.appenderRefs = service
 logger.package.appenderRef.service.ref = chats
-
-
+logger.package.appenderRef.service.level = info
