asynchron: Run asynchronous logger example

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,126 +1,99 @@
 status = error
 name = PropertiesConfig
 
-######################################
+###############################################################################
 # Global properties as varies
-######################################
+###############################################################################
 property.logPath = logs
 
-######################################
+###############################################################################
 # Appenders Section for log-files
-######################################
-appenders = rolling, console, rolling2, errorAppender, service
+###############################################################################
+appenders = console, serverLog, debugLog, errorLog, chat
 
-appender.rolling.type = RollingFile
-appender.rolling.name = RollingFile
-appender.rolling.immediateFlush= true
-appender.rolling.append = true
-appender.rolling.fileName = ${logPath}/server.log
-appender.rolling.filePattern = server-log-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
-appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-appender.rolling.policies.type = Policies
-appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 1
-appender.rolling.policies.time.modulate = true
-appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=10MB
-appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.max = 20
-appender.rolling.filter.threshold.type = LevelRangeFilter
-appender.rolling.filter.threshold.minLevel = info
-appender.rolling.filter.threshold.maxLevel = info
-appender.rolling.filter.threshold.onMatch = ACCEPT
-appender.rolling.filter.threshold.onMismatch = DENY
-
+# appender to console
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-appender.rolling2.type = RollingFile
-appender.rolling2.name = debugLog
-appender.rolling2.immediateFlush= true
-appender.rolling2.append = true
-appender.rolling2.fileName = ${logPath}/debug.log
-appender.rolling2.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
-appender.rolling2.layout.type = PatternLayout
-appender.rolling2.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-appender.rolling2.policies.type = Policies
-appender.rolling2.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling2.policies.time.interval = 1
-appender.rolling2.policies.time.modulate = true
-appender.rolling2.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling2.policies.size.size=10MB
-appender.rolling2.strategy.type = DefaultRolloverStrategy
-appender.rolling2.strategy.max = 20
-appender.rolling2.filter.threshold.type = LevelRangeFilter
-appender.rolling2.filter.threshold.minLevel = DEBUG
-appender.rolling2.filter.threshold.maxLevel = DEBUG
-appender.rolling2.filter.threshold.onMatch = ACCEPT
-appender.rolling2.filter.threshold.onMismatch = DENY
+#appender to server.log
+appender.serverLog.type = RandomAccessFile
+appender.serverLog.name = serverLog
+appender.serverLog.immediateFlush = false
+appender.serverLog.append = false
+appender.serverLog.fileName = ${logPath}/server.log
+appender.serverLog.layout.type = PatternLayout
+appender.serverLog.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.serverLog.filter.threshold.type = LevelRangeFilter
+appender.serverLog.filter.threshold.minLevel = info
+appender.serverLog.filter.threshold.maxLevel = info
+appender.serverLog.filter.threshold.onMatch = ACCEPT
+appender.serverLog.filter.threshold.onMismatch = DENY
 
-appender.errorAppender.type = RollingFile
-appender.errorAppender.name = errorLog
-appender.errorAppender.immediateFlush= true
-appender.errorAppender.append = true
-appender.errorAppender.fileName = ${logPath}/error.log
-appender.errorAppender.filePattern = error-log-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
-appender.errorAppender.layout.type = PatternLayout
-appender.errorAppender.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-appender.errorAppender.policies.type = Policies
-appender.errorAppender.policies.time.type = TimeBasedTriggeringPolicy
-appender.errorAppender.policies.time.interval = 1
-appender.errorAppender.policies.time.modulate = true
-appender.errorAppender.policies.size.type = SizeBasedTriggeringPolicy
-appender.errorAppender.policies.size.size=10MB
-appender.errorAppender.strategy.type = DefaultRolloverStrategy
-appender.errorAppender.strategy.max = 20
-appender.errorAppender.filter.threshold.type = ThresholdFilter
-appender.errorAppender.filter.threshold.level = warn
+#appender to debug.log
+appender.debugLog.type = RandomAccessFile
+appender.debugLog.name = debugLog
+appender.debugLog.immediateFlush = false
+appender.debugLog.append = false
+appender.debugLog.fileName = ${logPath}/debug.log
+appender.debugLog.layout.type = PatternLayout
+appender.debugLog.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.debugLog.filter.threshold.type = LevelRangeFilter
+appender.debugLog.filter.threshold.minLevel = DEBUG
+appender.debugLog.filter.threshold.maxLevel = DEBUG
+appender.debugLog.filter.threshold.onMatch = ACCEPT
+appender.debugLog.filter.threshold.onMismatch = DENY
 
-appender.service.type = RollingFile
-appender.service.name = chats
-appender.service.append = true
-appender.service.fileName = ${logPath}/chats.log
-appender.service.filePattern = chats-log-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
-appender.service.layout.type = PatternLayout
-appender.service.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-appender.service.policies.type = Policies
-appender.service.policies.time.type = TimeBasedTriggeringPolicy
-appender.service.policies.time.interval = 1
-appender.service.policies.time.modulate = true
-appender.service.policies.size.type = SizeBasedTriggeringPolicy
-appender.service.policies.size.size=10MB
-appender.service.strategy.type = DefaultRolloverStrategy
-appender.service.strategy.max = 20
-appender.service.filter.threshold.type = LevelRangeFilter
-appender.service.filter.threshold.minLevel = INFO
-appender.service.filter.threshold.maxLevel = INFO
-appender.service.filter.threshold.onMatch = ACCEPT
-appender.service.filter.threshold.onMismatch = DENY
+#appender to error.log
+appender.errorLog.type = RandomAccessFile
+appender.errorLog.name = errorLog
+appender.errorLog.immediateFlush = false
+appender.errorLog.append = false
+appender.errorLog.fileName = ${logPath}/error.log
+appender.errorLog.layout.type = PatternLayout
+appender.errorLog.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.errorLog.filter.threshold.type = ThresholdFilter
+appender.errorLog.filter.threshold.level = warn
 
-######################################
+#appender for the user chats
+appender.chat.type = RandomAccessFile
+appender.chat.name = chats
+appender.chat.append = false
+appender.chat.immediateFlush = false
+appender.chat.fileName = ${logPath}/chats.log
+appender.chat.layout.type = PatternLayout
+appender.chat.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.chat.filter.threshold.type = LevelRangeFilter
+appender.chat.filter.threshold.minLevel = INFO
+appender.chat.filter.threshold.maxLevel = INFO
+appender.chat.filter.threshold.onMatch = ACCEPT
+appender.chat.filter.threshold.onMismatch = DENY
+
+###############################################################################
 # Loggers for logging different packages
-######################################
-loggers = package
+###############################################################################
+loggers = chats
 
 # RootLogger write all into logs, besides chats.log
 rootLogger.level = debug
 rootLogger.additivity = false
-rootLogger.appenderRefs = stdout, rolling, rolling2, errorLog
+rootLogger.includeLocation = true
+rootLogger.appenderRefs = stdout, serverLog, debugLog, errorLog
 rootLogger.appenderRef.stdout.ref = STDOUT
-rootLogger.appenderRef.rolling.ref = RollingFile
-rootLogger.appenderRef.rolling.level = info
-rootLogger.appenderRef.rolling2.ref = debugLog
-rootLogger.appenderRef.rolling2.level = debug
-rootLogger.appenderRef.errorAppender.ref = errorLog
-rootLogger.appenderRef.errorAppender.level = warn
+rootLogger.appenderRef.serverLog.ref = serverLog
+rootLogger.appenderRef.serverLog.level = info
+rootLogger.appenderRef.debugLog.ref = debugLog
+rootLogger.appenderRef.debugLog.level = debug
+rootLogger.appenderRef.errorLog.ref = errorLog
+rootLogger.appenderRef.errorLog.level = warn
 
-# Logs only chat messages of class: org.remad.logging.protocol.Protocol
-logger.package.name = org.remad.logging.protocol.Protocol
-logger.package.additivity = false
-logger.package.level = info
-logger.package.appenderRefs = service
-logger.package.appenderRef.service.ref = chats
-logger.package.appenderRef.service.level = info
+# Logs only info log message of class: org.remad.logging.protocol.Protocol
+logger.chats.type = AsyncLogger
+logger.chats.name = org.remad.logging.protocol.Protocol
+logger.chats.includeLocation = true
+logger.chats.additivity = false
+logger.chats.level = info
+logger.chats.appenderRefs = chat
+logger.chats.appenderRef.chat.ref = chats
+logger.chats.appenderRef.chat.level = info
